# goit-pw-se-hw-13

./: .gitignore
contacts_api/: .env.example  Dockerfile  pyproject.toml
contacts_api/contacts_api/: auth.py  config.py  crud.py  database.py  deps.py  main.py  models.py  schemas.py  utils_cloudinary.py  utils_email.py
contacts_api/contacts_api/routers/: auth.py  contacts.py  users.py
django_quotes/: .env.example  manage.py  pyproject.toml
django_quotes/quotes/: admin.py  forms.py  models.py  urls.py  views.py
django_quotes/quotes/migrations/: 0001_initial.py
django_quotes/quotes/migrations/commands/: migrate_from_mongo.py
django_quotes/quotes/templates/: base.html
django_quotes/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  index.html  scrape_form.html  tag.html
django_quotes/quotes/templates/registration/: password_reset_form.html
django_quotes/quotes/templates/users/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
django_quotes/quotes_project/: settings.py  urls.py
django_quotes/users/: urls.py  views.py
django_quotes/users/templates/users/: login.html  signup.html
