[tool.poetry]
name = "contacts_api"
version = "0.1.0"
description = "FastAPI Contacts API with auth, email verification, redis rate-limit, cloudinary"
authors = ["You"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = {extras=["standard"], version = "^0.22"}
sqlalchemy = "^2.0"
psycopg = {extras = ["binary"], version = "^3.2"}
python-dotenv = "^1.0"
pydantic = "^2.12"
passlib = {extras = ["bcrypt"], version="^1.7"}
python-jose = "^3.3"
redis = "^5.3"
cloudinary = "^1.33.0"
python-multipart = "^0.0.6"
email-validator = "^2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
