[project]
name = "django_quotes"
version = "0.1.0"
description = ""
authors = [
    {name = "Nataliia-Kaguia",email = "moon.kaguia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pymongo (>=4.15.4,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "django_quotes"
version = "0.1.0"
description = ""
authors = ["You"]
package-mode = false